--- a/src/views/login/login.module.css
+++ b/src/views/login/login.module.css
@@ -1,3 +1,11 @@
 .card__title {
     text-align: center;
 }
+
+.justify__center {
+    justify-content: center;
+}
+
+.text__end {
+    text-align: end;
+}
